# piverse

./: .gitignore  .replit  replit.md  spec.md
attached_assets/: Pasted-To-get-a-coding-agent-like-an-AI-developer-or-a-freelan_1769851344561.txt  Pasted-review-This-sounds-like-a-reskinning-or-rebranding-proj_1769847388213.txt
backend/: .env.example  .gitignore  package-lock.json  package.json
backend/src/: index.js
backend/src/config/: solana.js
backend/src/controllers/: chatController.js  predictionController.js
backend/src/middleware/: errorHandler.js
backend/src/models/: GameState.js  Message.js  Prediction.js
backend/src/routes/: api.js  config.js
backend/src/services/: solana.js
backend/src/utils/: logger.js
contracts/piverse/: .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json
contracts/piverse/migrations/: deploy.ts
contracts/piverse/programs/piverse/: Cargo.toml
contracts/piverse/programs/piverse/src/: lib.rs
contracts/piverse/scripts/: initialize-game.ts
contracts/piverse/tests/: piverse.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: site.webmanifest
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: Countdown.jsx  Header.jsx  HowToPlayModal.jsx  ProtectedRoute.jsx  TransactionLoader.jsx  WinnerCelebration.jsx
frontend/src/config/: idl.json  solana.js
frontend/src/context/: ConfigContext.jsx  WalletContextProvider.jsx
frontend/src/hooks/: useGameData.js
frontend/src/pages/: AccessPage.jsx  GameInterface.jsx  (+1 more)
(+2 files in other folders)
